Hulatt: Against popular culture (Adorno)

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" media="screen" href="../css/s_124085_triad.css" title="Three-colour scheme" />
   <link rel="alternate stylesheet" type="text/css" media="screen" href="../css/systemcolours.css" title="System colours" />
   <link rel="alternate stylesheet" type="text/css" media="screen" href="../css/default.css" title="No colours" />
-  <link rel="alternate stylesheet" type="text/css" media="screen" href="../css/meiert-qa.css" title="Meiert's QA Stylesheet" />
+  <link rel="alternate stylesheet" type="text/css" media="screen" href="../css/meiert-qa.css" title="Meiert's QA Style Sheet" />
   <meta name="robots" content="noindex, nofollow" />
   <meta name="googlebot" content="noindex, nofollow" />
 </head>
@@ -1489,6 +1489,10 @@
         <i class="website">La-Philosophie.com</i>, 22.05.2017.
         <!--@@PDF-->
         <!--La-Philosophie on Twitter: https://twitter.com/La_Philosophie -->
+      </li>
+      <li>Hulatt, Owen:
+        <a href="https://aeon.co/essays/against-guilty-pleasures-adorno-on-the-crimes-of-pop-culture">Against popular culture</a>,
+        <i class="magazine">Aeon</i>, 20.02.2018.
       </li>
       <li>Sherwood, Harriet:
         <a href="https://www.theguardian.com/uk-news/2018/jan/17/pakistani-humanist-denied-uk-asylum-after-failing-to-identify-plato">Pakistani humanist denied <abbr>UK</abbr> asylum after failing to identify Plato</a>,
