Sagar: The real Adam Smith

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -2357,6 +2357,11 @@
         Penguin, 2002. (384 pages)
         <a href="https://www.penguin.co.uk/books/23148/the-penguin-history-of-economics/9780140260427/"><abbr>ISBN</abbr>: 9780140260427</a>
       </li>
+      <li>Sagar, Paul
+        <a href="https://aeon.co/essays/we-should-look-closely-at-what-adam-smith-actually-believed">The real Adam Smith</a>,
+        <i class="magazine">Aeon</i>, 16.01.2018.
+        <!--@@PDF-->
+      </li>
       <!--
       <li>:
         <i class="booktitle"></i>.
@@ -2709,6 +2714,10 @@
 
       Cicero:
       * Catherine Steel: The Cambridge Companion to Cicero. Cambridge University Press, 2013. ISBN 9780521729802. http://www.cambridge.org/us/academic/subjects/classical-studies/classical-literature/cambridge-companion-cicero?format=PB 
+
+      Other:
+      * Redcliffe N. Salaman: The History and Social Influence of the Potato. 2nd Edition. Cambridge UP, 1985. ISBN 9780521316231. http://www.cambridge.org/de/academic/subjects/history/regional-and-world-history-general-interest/history-and-social-influence-potato-2nd-edition?format=PB 
+      * Antoin Sevruguin: https://en.wikipedia.org/wiki/Antoin_Sevruguin & http://www.iranicaonline.org/articles/sevruguin-antoin-1 
     -->
   </main>
 
