Levack: Witchcraft Sourcebook, Witch-Hunt ...

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -822,6 +822,12 @@
         <a href="http://www.verlagshaus-roemerweg.de/Marix_Verlag/Marco_Frenschkowski-Die_Hexen-EAN:9783865399656.html"><abbr>ISBN</abbr> 978-3-86539-965-6</a>.
         <br />Roper, Lyndal: <i class="booktitle">Witch Craze: Terror and Fantasy in Baroque Germany</i>. Yale University Press, 2006.
         <a href="https://yalebooks.yale.edu/book/9780300119831/witch-craze"><abbr>ISBN</abbr> 9780300119831</a>.
+        <br />
+        Levack, Brian P., editor: <i class="booktitle">The Witchcraft Sourcebook</i>. Second edition. Routledge, 2015.
+        <a href="https://www.routledge.com/The-Witchcraft-Sourcebook-Second-Edition/Levack/p/book/9781138774971"><abbr>ISBN</abbr> 9781138774971</a>.
+        <br />
+        Levack, Brian P.: <i class="booktitle">The Witch-Hunt in Early Modern Europe</i>. Fourth edition. Routledge, 2016.
+        <a href="https://www.routledge.com/The-Witch-Hunt-in-Early-Modern-Europe/Levack/p/book/9781138808102"><abbr>ISBN</abbr> 9781138808102</a>.
       </li>
       <li><span lang="fr">Droit du seigneur</span> <abbr>aka</abbr> <span lang="la">ius primae noctis</span>: 
         <a href="https://en.wikipedia.org/wiki/Droit_du_seigneur" lang="fr" hreflang="en">droit du seigneur (Wikipedia)</a>. 
