Floridi: best books on philosophy of information

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1499,6 +1499,11 @@
         <a href="https://aeon.co/essays/against-guilty-pleasures-adorno-on-the-crimes-of-pop-culture">Against popular culture</a>,
         <i class="magazine">Aeon</i>, 20.02.2018.
       </li>
+      <li>Floridi, Luciano:
+        <a href="https://fivebooks.com/best-books/luciano-floridi-philosophy-information/">Luciano Floridi recommends the best books on the Philosophy of Information</a>,
+        <i class="website">Five Books</i>, February 2018.
+        <!--@@list books-->
+      </li>
       <li>Sherwood, Harriet:
         <a href="https://www.theguardian.com/uk-news/2018/jan/17/pakistani-humanist-denied-uk-asylum-after-failing-to-identify-plato">Pakistani humanist denied <abbr>UK</abbr> asylum after failing to identify Plato</a>,
         <i class="newspaper">The Guardian</i>, 17.01.2018.
