Resnik: The Price of Truth (OUP, 2007).

--- a/science/index.html
+++ b/science/index.html
@@ -1150,6 +1150,10 @@
         <i class="website">Scott Berkun</i>, 22.11.2013. Quote:
         <q>Faith in data grows in relation to your distance from the collection of it</q>.
       </li>
+      <li>Resnik, David B.:
+        <i class="booktitle">The Price of Truth: How Money Affects the Norms of Science</i>. Oxford University Press, 2007. (240 pages)
+        <a href="https://global.oup.com/academic/product/the-price-of-truth-9780195309782"><abbr>ISBN</abbr> 9780195309782</a>.
+      </li>
     </ul>
 
     <p>Economics:</p>
