--- a/humanities/index.html
+++ b/humanities/index.html
@@ -480,11 +480,23 @@
     </blockquote>
 
 
-    <h2>Linguistics</h2>
+    <h2>Language and Linguistics</h2>
     <ul>
       <li>Dorren, Gaston:
         <a href="https://aeon.co/essays/why-is-linguistics-such-a-magnet-for-dilettantes-and-crackpots">Why is linguistics such a magnet for dilettantes and crackpots?</a>,
         <i class="magazine">Aeon</i>, 14.09.2017.
+      </li>
+      <li>Everett, Daniel L.:
+        <a href="https://fivebooks.com/best-books/daniel-everett-linguistics/">The best books on Language and Thought</a>,
+        <i class="website">Five Books</i> (no date; February 2018?).
+        Everett's recommendations are the following:
+        <i class="booktitle">Language: An Introduction to the Study of Speech</i> (1921) by Edward Sapir,
+        <i class="booktitle">Language in Relation to a Unified Theory of the Structure of Human Behaviour</i> (1967) by Kenneth Pike,
+        <a href="https://en.wikipedia.org/wiki/Aspects_of_the_Theory_of_Syntax"><i class="booktitle">Aspects of the Theory of Syntax</i></a> (1965) by Noam Chomsky,
+        <i class="booktitle">On Understanding Grammar</i> (1979) by Talmy Givón and
+        <i class="booktitle">Making It Explicit: Reasoning, Representing &amp; Discursive Commitment</i> (1994) by Robert Brandom.
+        <br />Quote:
+        <q>The linguist argues that all language has a basis in culture and explains how Chomsky is like Freud: crucial, but crucially wrong.</q>
       </li>
     </ul>
 
