Goldstein: best philosophical novels

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1504,6 +1504,18 @@
         <i class="website">Five Books</i>, February 2018.
         <!--@@list books-->
       </li>
+      <li>Goldstein, Rebecca:
+        <a href="https://fivebooks.com/best-books/best-philosophical-novels/">Best Philosophical Novels</a>,
+        <i class="website">Five Books</i> (no date; possibly February 2018).
+        <br />The five novels are
+        <i class="booktitle">Middlemarch</i> (1871–72) by George Eliot,
+        <i class="booktitle">Moby-Dick</i> (1851) by Herman Melville,
+        <i class="booktitle">Death in Venice</i> (1912) by Thomas Mann,
+        <i class="booktitle">The Black Prince</i> (1973) by Iris Murdoch and
+        <i class="booktitle">Infinite Jest</i> (1996) by David Foster Wallace.
+        <i class="booktitle">Middlemarch</i> and <i class="booktitle">Moby-Dick</i>
+        <q>grew out of their authors’ preoccupations with Spinoza.</q>
+      </li>
       <li>Sherwood, Harriet:
         <a href="https://www.theguardian.com/uk-news/2018/jan/17/pakistani-humanist-denied-uk-asylum-after-failing-to-identify-plato">Pakistani humanist denied <abbr>UK</abbr> asylum after failing to identify Plato</a>,
         <i class="newspaper">The Guardian</i>, 17.01.2018.
