CSAIL: Bias in AI (English – Turkish – English)

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -140,6 +140,13 @@
         <a href="https://flipboard.com/@becomingdatasci/bias-in-machine-learning-rv7p7r9rz">Bias in machine learning: Articles about Bias in Machine Learning Algorithms / Data Science, and how to combat it</a>
         on Flipboard.com.
       </li>
+      <li><abbr title="Computer Science and Artificial Intelligence Lab">CSAIL</abbr> at <abbr>MIT</abbr>:
+        <a href="https://twitter.com/MIT_CSAIL/status/968553823999492098">Bias in <abbr>AI</abbr>: translating English to Turkish, a gender neutral language, then that same Turkish phrase back to English (&hellip;)</a>
+        (Twitter, 27.02.2018).
+        The tweet contains screenshots showing the translation of the sentences &ldquo;He is a babysitter&rdquo; and
+        &ldquo;She is a doctor&rdquo;; after translating these into Turkish and the resulting Turkish sentences back into English,
+        the output is &ldquo;She's a babysitter&rdquo; and &ldquo;He is a doctor&rdquo;.
+      </li>
       <!--
       <li>
         <a href=""></a>
