--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -386,6 +386,10 @@
         <a href="https://towardsdatascience.com/the-10-statistical-techniques-data-scientists-need-to-master-1ef6dbd531f7">The 10 Statistical Techniques Data Scientists Need to Master</a>,
         <i class="blog">Towards Data Science</i>, 30.10.2017.
       </li>
+      <li>Ming, Yao, et al.:
+        <a href="https://arxiv.org/abs/1710.10777">Understanding Hidden Memories of Recurrent Neural Networks</a>,
+        <i class="website">arXiv.org</i>, October 2017.
+      </li>
       <!--BMBF: Innovationsschub mit Künstlicher Intelligenz, 12.09.2017: https://www.bmbf.de/de/innovationsschub-mit-kuenstlicher-intelligenz-4781.html -->
       <li>Haas, Peter:
         <a href="https://www.youtube.com/watch?v=TRzBk_KuIaM">The Real Reason to be Afraid of Artificial Intelligence</a>:
