--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -391,6 +391,10 @@
         <i class="website">arXiv.org</i>, October 2017.
       </li>
       <!--BMBF: Innovationsschub mit Künstlicher Intelligenz, 12.09.2017: https://www.bmbf.de/de/innovationsschub-mit-kuenstlicher-intelligenz-4781.html -->
+      <li>Johnson, Nikita:
+        <a href="https://www.re-work.co/blog/should-you-be-using-ai-in-your-business-white-paper-2017">Should You Be Using <abbr>AI</abbr> In Your Business?: White Paper</a>,
+        <i class="blog">Re-Work blog</i>, 29.11.2017.
+      </li>
       <li>Haas, Peter:
         <a href="https://www.youtube.com/watch?v=TRzBk_KuIaM">The Real Reason to be Afraid of Artificial Intelligence</a>:
         presentation at TEDxDirigo (YouTube, 13 minutes, 15.12.2017).
