How: Mitigating the Pitfalls of a Race to AI.

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -395,6 +395,10 @@
         <a href="https://www.re-work.co/blog/should-you-be-using-ai-in-your-business-white-paper-2017">Should You Be Using <abbr>AI</abbr> In Your Business?: White Paper</a>,
         <i class="blog">Re-Work blog</i>, 29.11.2017.
       </li>
+      <li>How, Yazmin:
+        <a href="https://www.re-work.co/blog/mitigating-the-pitfalls-of-a-race-to-ai">Mitigating the Pitfalls of a Race to <abbr>AI</abbr></a>,
+        <i class="blog">Re-Work blog</i>, 14.12.2017.
+      </li>
       <li>Haas, Peter:
         <a href="https://www.youtube.com/watch?v=TRzBk_KuIaM">The Real Reason to be Afraid of Artificial Intelligence</a>:
         presentation at TEDxDirigo (YouTube, 13 minutes, 15.12.2017).
