Scruton: The Soul of the World.

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -252,6 +252,11 @@
         <a href="https://en.wikipedia.org/wiki/Religiosity_and_intelligence">Religiosity and intelligence</a>.
       </li>
       <!--@@more: https://duckduckgo.com/?q=helmuth+nyborg+intelligence+religion&ia=web -->
+      <li>Scruton, Roger:
+        <i class="booktitle">The Soul of the World</i>. Princeton University Press, 2016. (216 pages)
+        <a href="https://press.princeton.edu/titles/10188.html"><abbr>ISBN</abbr> 9781400850006</a>.
+        <br /><q>In <i class="booktitle">The Soul of the World</i>, renowned philosopher Roger Scruton defends the experience of the sacred against today's fashionable forms of atheism.</q>
+      </li>
     </ul>
 
     <h2>Misconceptions about Atheism</h2>
