Sadler: Half Hour Hegel

--- a/philosophy/hegel_gwf.html
+++ b/philosophy/hegel_gwf.html
@@ -141,6 +141,13 @@
         <a href="https://www.marxists.org/deutsch/philosophie/hegel/index.htm">G.W.F. Hegel</a>:
         links to works (in German) hosted in Marxists.org.
       </li>
+      <li>Sadler, Gregory B.:
+        <a href="https://www.youtube.com/playlist?list=PL4gvlOxpKKIgR4OyOt31isknkVH2Kweq2">Half Hour Hegel: The Complete Phenomenology of Spirit</a>:
+        a series of over 200 thirty-minute YouTube videos on Hegel's
+        <i class="booktitle" lang="de">Phänomenologie des Geistes</i>.
+        Salder is co-founder of 
+        <a href="https://reasonio.wordpress.com/">Reason<abbr>IO</abbr></a>.
+      </li>
       <!--@@TODO: more links at bottom of https://www.marxists.org/deutsch/philosophie/hegel/index.htm -->
       <!--
       <li>
