Zuckerman: Society without God

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -257,6 +257,10 @@
         <a href="https://press.princeton.edu/titles/10188.html"><abbr>ISBN</abbr> 9781400850006</a>.
         <br /><q>In <i class="booktitle">The Soul of the World</i>, renowned philosopher Roger Scruton defends the experience of the sacred against today's fashionable forms of atheism.</q>
       </li>
+      <li>Zuckerman, Phil:
+        <i class="booktitle">Society without God: What the Least Religious Nations Can Tell Us About Contentment</i>. New York University Press, 2008. (240 pages)
+        <a href="https://nyupress.org/books/9780814797143/"><abbr>ISBN</abbr> 9780814797143</a>.
+      </li>
     </ul>
 
     <h2>Misconceptions about Atheism</h2>
