Chetibi: Demystifying the Math behind ML

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -399,6 +399,10 @@
         <a href="https://www.re-work.co/blog/mitigating-the-pitfalls-of-a-race-to-ai">Mitigating the Pitfalls of a Race to <abbr>AI</abbr></a>,
         <i class="blog">Re-Work blog</i>, 14.12.2017.
       </li>
+      <li>Chetibi, Akram:
+        <a href="https://medium.com/@achetibi/demystifying-the-math-behind-machine-learning-5d78adf1e2f2">Demystifying the Math behind Machine Learning</a>,
+        <i class="blog">Medium</i>, 14.12.2017.
+      </li>
       <li>Haas, Peter:
         <a href="https://www.youtube.com/watch?v=TRzBk_KuIaM">The Real Reason to be Afraid of Artificial Intelligence</a>:
         presentation at TEDxDirigo (YouTube, 13 minutes, 15.12.2017).
