Carrier: Sense and Goodness Without God

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -261,6 +261,10 @@
         <i class="booktitle">Society without God: What the Least Religious Nations Can Tell Us About Contentment</i>. New York University Press, 2008. (240 pages)
         <a href="https://nyupress.org/books/9780814797143/"><abbr>ISBN</abbr> 9780814797143</a>.
       </li>
+      <li>Carrier, Richard:
+        <i class="booktitle">Sense and Goodness Without God: A Defense of Metaphysical Naturalism</i>. AuthorHouse, 2005. (444 pages)
+        <a href="https://www.authorhouse.com/bookstore/bookdetail.aspx?bookid=SKU-000350499"><abbr>ISBN</abbr> 9781420802931</a>.
+      </li>
     </ul>
 
     <h2>Misconceptions about Atheism</h2>
