--- a/philosophy/hegel_gwf.html
+++ b/philosophy/hegel_gwf.html
@@ -175,6 +175,9 @@
       <li><a href="https://philosophy.stackexchange.com/q/18386/23586">What should I read before reading Hegel's “Phenomenology of Spirit”?</a>
         a question asked on Philosophy Stack Exchange.
       </li>
+      <li><a href="https://philosophy.stackexchange.com/q/45666/23586">How can Hegel call philosophy a science?</a>:
+        a question asked on Philosophy Stack Exchange.
+      </li>
       <li><a href="https://philosophy.stackexchange.com/questions/tagged/hegel">Questions tagged &ldquo;Hegel&rdquo;</a>
         on Philosophy Stack Exchange.
       </li>
