Wolff: best books on political philosphy

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1450,13 +1450,17 @@
       </li>
       <li>Wolff, Jonathan:
         <a href="https://fivebooks.com/best-books/jonathan-wolff-on-political-philosophy/">The best books on Political Philosophy</a>,
-        <i class="website">Five Books</i>, February 2018. The recommendations are:
+        <i class="website">Five Books</i>, February 2018. 
+        Among other books, Wollf wrote 
+        <a href="https://global.oup.com/academic/product/why-read-marx-today-9780192805058"><i class="booktitle">Why Read Marx Today</i></a>
+        (Oxford University Press, 2003.)
+        His recommendations are:
         <ul>
           <li>Hobbes, Thomas:
             <a href="https://en.wikipedia.org/wiki/Leviathan_(Hobbes_book)"><i class="booktitle">Leviatan</i></a> (1651).
           </li>
           <li>Marx, Karl:
-            <i class="booktitle">Early Writings</i> (especially the 1844 manuscripts).
+            <i class="booktitle">Early Writings</i> (especially the <i class="booktitlte">1844 Manuscripts</i>, also known as the <i class="booktitle">Paris Manuscripts</i>).
           </li>
           <li>Rawls, John:
             <i class="booktitle">A Theory of Justice</i>. Revised edition. Harvard University Press, 1999. (560 pages)
@@ -1473,6 +1477,7 @@
           </li>
         </ul>
       </li>
+      <!--@@ Terrell Carver: The best books on Marx and Marxism: https://fivebooks.com/best-books/terrell-carver-marx-and-marxism/ -->
       <li>Kemasingki, Pim:
         <a href="http://www.chiangmaicitylife.com/citylife-articles/seeking-answers-philosopher-nigel-warburton/">Seeking Answers with Philosopher Nigel Warburton</a>,
         <i class="website">Citylife Chiang Mai</i>, 01.02.2018.
