Gottlieb: The Best Books on God

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -273,6 +273,18 @@
         <i class="booktitle">Sense and Goodness Without God: A Defense of Metaphysical Naturalism</i>. AuthorHouse, 2005. (444 pages)
         <a href="https://www.authorhouse.com/bookstore/bookdetail.aspx?bookid=SKU-000350499"><abbr>ISBN</abbr> 9781420802931</a>.
       </li>
+      <li>Gottlieb, Anthony:
+        <a href="https://fivebooks.com/best-books/god/">The Best Books on God</a>,
+        <i class="website">Five Books</i> (no date). The five books are
+        <a href="https://en.wikipedia.org/wiki/Tractatus_Theologico-Politicus"><i class="booktitle" lang="la">Tractatus Theologico-Politicus</i></a> (1677) by Baruch Spinoza,
+        <a href="https://en.wikipedia.org/wiki/Dialogues_Concerning_Natural_Religion"><i class="booktitle">Dialogues Concerning Natural Religion</i></a> (1779) by David Hume,
+        <i class="booktitle">Society Without God</i> (2008) by <a href="https://en.wikipedia.org/wiki/Phil_Zuckerman">Phil Zuckerman</a>,
+        <i class="booktitle">Sacred and Secular: Politics and Religion Worldwide</i> (2004) by 
+        <a href="https://en.wikipedia.org/wiki/Pippa_Norris">Pippa Norris</a> and 
+        <a href="https://en.wikipedia.org/wiki/Ronald_Inglehart">Ronald Inglehart</a>, and
+        <a href="https://en.wikipedia.org/wiki/God_is_Back"><i class="booktitle">God is Back: How the Global Revival of Faith Is Changing the World</i></a> 
+        by John Micklethwait and Adrian Wooldridge.
+      </li>
     </ul>
 
     <h2>Misconceptions about Atheism</h2>
