Vainu: 3 Lessons Learned from Automating ...

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -426,6 +426,10 @@
         <a href="https://blogs.microsoft.com/ai/microsoft-creates-ai-can-read-document-answer-questions-well-person/">Microsoft creates <abbr>AI</abbr> that can read a document and answer questions about it as well as a person</a>,
         <i class="blog">Microsoft: The <abbr>AI</abbr> Blog</i>, 15.01.2018.
       </li>
+      <li>Vainu, Indrek:
+        <a href="https://www.re-work.co/blog/3-lessons-learned-from-automating-customer-service-with-ai">3 Lessons Learned From Automating Customer Service With <abbr>AI</abbr></a>,
+        <i class="blog">Re-Work blog</i>, 31.01.2018.
+      </li>
     </ul>
 
     <h3>Introductory Articles and Materials</h3>
