Monsanto Papers (TruePublica)

--- a/science/index.html
+++ b/science/index.html
@@ -1154,6 +1154,11 @@
         <i class="booktitle">The Price of Truth: How Money Affects the Norms of Science</i>. Oxford University Press, 2007. (240 pages)
         <a href="https://global.oup.com/academic/product/the-price-of-truth-9780195309782"><abbr>ISBN</abbr> 9780195309782</a>.
       </li>
+      <li>
+        <a href="http://truepublica.org.uk/global/monsanto-papers-tell-us-corporate-science/">What the Monsanto Papers tell us about corporate science</a>,
+        <i class="website">TruePublica (<abbr>UK</abbr>)</i>, 05.03.2018.
+        <!--@@PDF-->
+      </li>
     </ul>
 
     <p>Economics:</p>
