Forland: Invisible Algorithms

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -430,6 +430,10 @@
         <a href="https://www.re-work.co/blog/3-lessons-learned-from-automating-customer-service-with-ai">3 Lessons Learned From Automating Customer Service With <abbr>AI</abbr></a>,
         <i class="blog">Re-Work blog</i>, 31.01.2018.
       </li>
+      <li>Forland, Laura:
+        <a href="http://www.publicbooks.org/invisible-algorithms-invisible-politics/">Invisible Algorithms, Invisible Politics</a>,
+        <i class="website">Public Books</i>, 12.02.2018.
+      </li>
     </ul>
 
     <h3>Introductory Articles and Materials</h3>
