Simon: The Sciences of the Artificial

--- a/lijst.html
+++ b/lijst.html
@@ -329,6 +329,7 @@
       * ? Ewald Engelen et al: After the Great Complacence: Financial Crisis and the Politics of Reform. Oxford UP, 2011: https://global.oup.com/academic/product/after-the-great-complacence-9780199589081 
       * ? Morton Keller: Obama's Time: A History. Oxford UP, 2015: https://global.oup.com/academic/product/obamas-time-9780199383375 
       * ? Colin Dueck: The Obama Doctrine: American Grand Strategy Today. Oxford UP, 2015: https://global.oup.com/academic/product/the-obama-doctrine-9780190202620 
+      * Hans Christoph Binswanger (1929 – 2018): https://de.wikipedia.org/wiki/Hans_Christoph_Binswanger 
     -->
     <li lang="fr">Michéa, Jean-Claude: <i class="booktitle">Notre ennemi, le capital</i>.
       Flammarion, 2017.
@@ -457,6 +458,10 @@
 
   <h2>Various Other Topics</h2>
   <ul>
+    <li>Simon, Herbert A.:
+      <strong><i class="booktitle">The Sciences of the Artificial</i></strong>. Third edition. <abbr>MIT</abbr> Press, 1996. (248 pages)
+      <a href="https://mitpress.mit.edu/books/sciences-artificial"><abbr>ISBN</abbr> 9780262691918</a>.
+    </li>
     <li>Lustig, Robert H.:
       <i class="http://www.penguinrandomhouse.com/books/531013/the-hacking-of-the-american-mind-by-robert-h-lustig-md-msl/9781101982594/">The Hacking of the American Mind: The Science Behind the Corporate Takeover of Our Bodies and Brains</i>.
       Penguin Random House, 2017. (352 pages)
@@ -576,6 +581,10 @@
     * William K. Clifford & William James: L’immoralité de la croyance religieuse: L’éthique de la croyance de William Clifford, suivi de La volonté de croire de William James. Agone, 2018: https://agone.org/bancdessais/limmoralitedelacroyancereligieuse/ 
     * Owen Jones: "Books that moved us forward in 2017": https://www.penguin.co.uk/articles/features/2017/dec/owen-jones-books-that-moved-us-forward-in-2017/
     * Twelve Theories of Human Nature, sixth edition, 2012: https://global.oup.com/academic/product/twelve-theories-of-human-nature-9780199859030?q=theories%20of%20human%20nature 
+    * Jonathan Wolff: An Introduction to Political Philosophy. Oxford University Press, 2015. ISBN 9780199658015. https://global.oup.com/academic/product/an-introduction-to-political-philosophy-9780199658015
+    * Jonathan Wolff: Why Read Marx Today? Oxford University Press, 2003. ISBN 9780192805058. 
+    * Josh Waitzkin: The Art of Learning: An Inner Journey to Optimal Performance. Free Press (Simon & Schuster), 2008. ISBN 9780743277464: http://www.simonandschuster.com/books/The-Art-of-Learning/Josh-Waitzkin/9780743277464  
+    * Robert Bringhurst: The Elements of Typographics Style. 
   -->
 
   </main>
