--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1521,6 +1521,10 @@
         <i class="booktitle">Middlemarch</i> and <i class="booktitle">Moby-Dick</i>
         <q>grew out of their authors’ preoccupations with Spinoza.</q>
       </li>
+      <li lang="de">Habermas, Jürgen:
+        <a href="http://www.logbuch-suhrkamp.de/juergen-habermas/durch-die-bibliothek-habermas/">Durch die Bibliothek …</a>,
+        <i class="blog">Logbuch Suhrkamp</i>, 09.03.2018.
+      </li>
       <li>Sherwood, Harriet:
         <a href="https://www.theguardian.com/uk-news/2018/jan/17/pakistani-humanist-denied-uk-asylum-after-failing-to-identify-plato">Pakistani humanist denied <abbr>UK</abbr> asylum after failing to identify Plato</a>,
         <i class="newspaper">The Guardian</i>, 17.01.2018.
