Simon: Models of Bounded Rationality Vol 3

--- a/lijst.html
+++ b/lijst.html
@@ -462,6 +462,10 @@
       <strong><i class="booktitle">The Sciences of the Artificial</i></strong>. Third edition. <abbr>MIT</abbr> Press, 1996. (248 pages)
       <a href="https://mitpress.mit.edu/books/sciences-artificial"><abbr>ISBN</abbr> 9780262691918</a>.
     </li>
+    <li>Simon, Herbert A.:
+      <i class="booktitle">Models of Bounded Rationality, Volume 3: Emperically Grounded Economic Reason</i>. <abbr>MIT</abbr> Press, 1997. (336 pages)
+      <a href="https://mitpress.mit.edu/books/models-bounded-rationality-0"><abbr>ISBN</abbr> 9780262519434</a>.
+    </li>
     <li>Lustig, Robert H.:
       <i class="http://www.penguinrandomhouse.com/books/531013/the-hacking-of-the-american-mind-by-robert-h-lustig-md-msl/9781101982594/">The Hacking of the American Mind: The Science Behind the Corporate Takeover of Our Bodies and Brains</i>.
       Penguin Random House, 2017. (352 pages)
