Brogaard et al: Do Economist Swing ...?

--- a/science/index.html
+++ b/science/index.html
@@ -1159,6 +1159,11 @@
         <i class="website">TruePublica (<abbr>UK</abbr>)</i>, 05.03.2018.
         <!--@@PDF-->
       </li>
+      <li>Brogaard, Jonathan; Engelberg, Joseph; Van Wesep, Edward:
+        <a href="https://www.aeaweb.org/articles?id=10.1257/jep.32.1.179">Do Economists Swing for the Fences after Tenure?</a>,
+        <i class="journal">Journal of Economic Perspectives</i>, 32.1 (2018): 179-94.
+        <!--@@PDF-->
+      </li>
     </ul>
 
     <p>Economics:</p>
