Grayling: best books in ideas that matter

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1303,6 +1303,27 @@
 
     <h2>Book Recommendations</h2>
     <ul>
+      <li>Grayling, A. C.:
+        <a href="https://fivebooks.com/best-books/a-c-grayling-on-ideas-that-matter/">The best books on Ideas that Matter</a>,
+        <i class="website">Five Books</i> (March 2018?).
+        The British philosopher A. C. Grayling has published several books, including
+        <i class="booktitle">The Good Book: A Secular Bible</i>
+        (Bloomsbury, <a href="https://www.bloomsbury.com/uk/the-good-book-9781408837832/"><abbr>ISBN</abbr> 9781408837832</a>.
+        Near the beginning of the interview, A. C. Grayling says,
+        <q>The idea that philosophy belongs to every educated person has been diminished as a result of the professionalization of the academy over the last century or so. (&hellip;)
+          If you go back to Hume, Locke or Descartes, you find that they weren’t writing for professionals in university, they were writing for their educated peers.
+          Every educated mind should be reflective and engaged with the great questions.
+        </q>
+        <ul>
+          <li><i class="booktitle">The Nicomachean Ethics</i> by Aristotle,</li>
+          <li><i class="booktitle">Critique of Pure Reason</i> (1781, 1787) by Immanuel Kant,</li>
+          <li><i class="booktitle">Pride and Prejudice</i> (1813) by Jane Austen,</li>
+          <li><i class="booktitle">Table-Talk</i> (1821, 1822) by William Hazlitt and</li>
+          <!--See also Hazlitt's The Spirif of the Age (1825): https://en.wikipedia.org/wiki/The_Spirit_of_the_Age -->
+          <li><i class="booktitle">The Origin of Species</i> (1859) by Charles Darwin.</li>
+        </ul>
+        <!--@@add books-->
+      </li>
       <li>Talisse, Robert:
         <a href="https://fivebooks.com/interview/robert-talisse-on-pragmatism/">The best books on Pragmatism</a>,
         <i class="website">Five Books</i> (October 2017?).
