Reda: The Future of AI

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -434,6 +434,11 @@
         <a href="http://www.publicbooks.org/invisible-algorithms-invisible-politics/">Invisible Algorithms, Invisible Politics</a>,
         <i class="website">Public Books</i>, 12.02.2018.
       </li>
+      <li>Reda, Julia:
+        <a href="https://juliareda.eu/events/future-of-ai/">The Future of Artificial Intelligence</a>,
+        <i class="website">Julia Reda's website</i>, February 2018.
+        <br />Announcement of an event in Brussels on 7 March 2018.
+      </li>
     </ul>
 
     <h3>Introductory Articles and Materials</h3>
