Sherrill: 100 Years of Overthrow; Talbot

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1715,6 +1715,20 @@
         <i class="booktitle">The Making of Global Capitalism: The Political Economy of American Empire</i>.
         Verso, 2013. <a href="https://www.versobooks.com/books/1527-the-making-of-global-capitalism"><abbr>ISBN</abbr> 9781781681367</a>.
       </li>
+      <li>Sherrill, Robert:
+        <a href="https://www.alternet.org/story/39416/america%27s_100_years_of_overthrow">America's 100 Years of Overthrow</a>,
+        <i class="website">Alternet</i>, 24.07.2006.
+      </li>
+      <li>Talbot, David:
+        <i class="booktitle">The Devil's Chessboard: Allen Dulles, the <abbr>CIA</abbr>, and the Rise of America's Secret Government</i>. HarperCollins, 2015. (704 pages)
+        <a href="https://www.harpercollins.com/9780062276162/the-devils-chessboard"><abbr>ISBN</abbr> 9780062276162</a>.
+        <!--also mentioned at https://www.cia.gov/library/center-for-the-study-of-intelligence/csi-publications/csi-studies/studies/vol-60-no-3/seeger-the-devils-chessboard.html
+          https://www.democracynow.org/2015/10/14/the_rise_of_america_s_secret
+          https://www.democracynow.org/2015/10/13/the_rise_of_americas_secret_government
+          https://www.c-span.org/video/?400034-1/the-devils-chessboard
+          https://archive.org/details/CINDYCSSB041016EM
+        -->
+      </li>
     </ul>
 
     <h3>Neoliberalism</h3>
