Frankish: best books on philosophy of mind

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1176,13 +1176,16 @@
       <li><a href="https://twitter.com/danieldennett">Daniel Dennett on Twitter</a>.
       </li>
       <li>Zawidzki, Tadeusz:
-        <span class="booktitle">Dennett</span>. Oneworld Thinkers.
+        <i class="booktitle">Dennett</i>. Oneworld Thinkers.
         Oneworld Publications,<!-- May --> 2007.
         <abbr>ISBN</abbr> 978-1-85168-484-7 (210 pages).
       </li>
+      <li>Huebner, Bryce (editor):
+        <i class="booktitle">The Philsophy of Daniel Dennett</i>. Oxford University Press, 2018. (400 pages)
+        <a href="https://global.oup.com/academic/product/the-philosophy-of-daniel-dennett-9780199367511"><abbr>ISBN</abbr>  9780199367511</a>.
+      </li>
       <li>Brook, Andrew; Ross, Don (editors):
-        <i class="booktitle">Daniel Dennett</i>.
-        Cambridge University Press, 2002.
+        <i class="booktitle">Daniel Dennett</i>. Cambridge University Press, 2002.
         <a href="http://www.cambridge.org/de/academic/subjects/philosophy/twentieth-century-philosophy/daniel-dennett"><abbr>ISBN</abbr> 9780521008648</a> (320 pages).
       </li>
       <li>Dennett, Daniel C.: 
@@ -1358,6 +1361,23 @@
           </li>
         </ul>
       </li>
+      <li>Frankish, Keith:
+        <a href="https://fivebooks.com/best-books/philosophy-mind-keith-frankish/">The best books on Philosophy of Mind</a>,
+        <i class="website">Five Books</i>, March 2018.
+        The British philosopher Keith Frankish recommends the following five books:
+        <i class="booktitle">A Materialist Theory of the Mind</i> (1968) by David Malet Armstrong,
+        <a href="https://en.wikipedia.org/wiki/Consciousness_Explained"><i class="booktitle">Consciousness Explained</i></a>
+        (1991) by Daniel Dennett (for a different view, see 
+        <a href="https://en.wikipedia.org/wiki/The_Conscious_Mind"><i class="booktitle">The Conscious Mind</i></a>
+        (1996) by David Chalmers),
+        <i class="booktitle">Varieties of Meaning</i> (2004) by Ruth Millikan (a book that needs to be re-read several times),
+        <a href="https://global.oup.com/academic/product/the-architecture-of-the-mind-9780199207077"><i class="booktitle">The Architecture of the Mind</i></a>
+        (2006) by Peter Carruthers (and possibly also <i class="booktitle">The Centred Mind</i>) and
+        <i class="booktitle">Supersizing the Mind</i> (2008) by Andy Clark.
+      </li>
+      <!-- https://fivebooks.com/best-books/paul-russell-on-free-will-and-responsibility/
+        https://fivebooks.com/books/marxism/ 
+      -->
       <li>Wolff, Jonathan:
         <a href="https://fivebooks.com/best-books/jonathan-wolff-on-political-philosophy/">The best books on Political Philosophy</a>,
         <i class="website">Five Books</i>, February 2018. 
