Ruse: Atheism: What Everyone Needs to Know

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -285,6 +285,10 @@
         <a href="https://en.wikipedia.org/wiki/God_is_Back"><i class="booktitle">God is Back: How the Global Revival of Faith Is Changing the World</i></a> 
         by John Micklethwait and Adrian Wooldridge.
       </li>
+      <li>Ruse, Michael:
+        <i class="booktitle">Atheism: What Everyone Needs to Know®</i>. Oxford University Press, 2015. (304 pages)
+        <a href="https://global.oup.com/academic/product/atheism-9780199334582"><abbr>ISBN</abbr> 9780199334582</a>.
+      </li>
     </ul>
 
     <h2>Misconceptions about Atheism</h2>
