Warden: How to build and run your first deep learning...

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -471,6 +471,10 @@
         <a href="https://www.re-work.co/blog/top-10-machine-learning-algorithms-for-beginners">Top 10 Machine Learning Algorithms for Beginners</a>,
         <i class="blog">Re-Work blog</i>, 08.12.2017.
       </li>
+      <li>Warden, Pete:
+        <a href="https://www.oreilly.com/learning/how-to-build-and-run-your-first-deep-learning-network">How to build and run your first deep learning network</a>,
+        <i class="website">O'Reilly Radar</i>, 23.07.2014.
+      </li>
     </ul>
 
     <h3>Artificial Intelligence and Health (and Healthcare)</h3>
