--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1729,6 +1729,19 @@
           https://archive.org/details/CINDYCSSB041016EM
         -->
       </li>
+      <li>Kinzer, Stephen:
+        <i class="booktitle">Overthrow: America's Century of Regime Change from Hawaii to Iraq</i>. Henry Holt and Co., 2007. (416 pages)
+        <a href="https://us.macmillan.com/overthrow/stephenkinzer/9780805082401/"><abbr>ISBN</abbr> 9780805082401</a>.
+        <br />See also the
+        <a href="http://stephenkinzer.com/">author's website</a>;
+        Democracy Now!:
+        <a href="https://www.democracynow.org/2006/4/21/overthrow_americas_century_of_regime_change">Overthrow: America’s Century of Regime Change from Hawaii to Iraq</a>
+        (21.04.2006); Democracy Now!:
+        <a href="https://www.youtube.com/watch?v=f9Q19QJpJ4s">Overthrow: 100 Years of U.S. Meddling &amp; Regime Change, from Iran to Nicaragua to Hawaii to Cuba</a>
+        (YouTube, 22 minutes, 12.03.2018)<!--also at https://www.democracynow.org/2018/3/12/100_years_of_us_interference_regime -->; and Democracy Now!:
+        <a href="https://www.democracynow.org/2018/3/12/as_ex_cia_head_admits_to">As Ex-<abbr>CIA</abbr> Head Admits to <abbr>U.S.</abbr> Meddling in Elections, Is Outrage over Russian Interference Overblown?</a>
+        (12.03.2018).<!--@@All the Shah's Men-->
+      </li>
     </ul>
 
     <h3>Neoliberalism</h3>
