Houlgate: The best books on Hegel

--- a/philosophy/hegel_gwf.html
+++ b/philosophy/hegel_gwf.html
@@ -158,6 +158,33 @@
 
     <h2>Links</h2>
     <ul>
+      <li>Houlgate, Stephen:
+        <a href="https://fivebooks.com/best-books/hegel-stephen-houlgate/">The best books on Hegel</a>,
+        <i class="website">Five Books</i>, March 2018. Houlgate's recommendations are
+        <i class="booktitle">The Phenomenology of Spirit</i> (1807) by G. W. F. Hegel,
+        <i class="booktitle">Science of Logic</i> (1812–1816) by G. W. F. Hegel,
+        <i class="booktitle">On Hegel’s Logic</i> (1981) by John W. Burbidge,
+        <!--out of print; see https://www.worldcat.org/title/on-hegels-logic-fragments-of-a-commentary/oclc/7614347
+          Burbidge also wrote 'Hegel on Logic and Religion: The Reasonableness of Christianity', 1992: http://www.sunypress.edu/p-1385-hegel-on-logic-and-religion.aspx (out of print)
+          'The A to Z of Hegelian Philosophy' Scarecrow Press, 2010
+        -->
+        <i class="booktitle">Hegel’s Idealism: The Satisfactions of Self-Consciousness</i> (1989) by 
+        <a href="https://en.wikipedia.org/wiki/Robert_B._Pippin">Robert Pippin</a> and
+        <i class="booktitle">Lectures on Aesthetics</i> by G. W. F. Hegel.
+      </li>
+      <!--@@introductory books
+        # see review https://www.amazon.com/gp/customer-reviews/RVIFDKMHUGYB6/ref=cm_cr_arp_d_rvw_ttl?ie=UTF8&ASIN=019280197X 
+          * Peter Singer: Hegel: A Very Short Introduction. OUP.
+          * Justus Hartnack: An Introduction to Hegel's Logic.
+          * Robert B. Pippin: Hegel's Idealism
+          * Robert B. Pippin: Hegel's Practical Philosophy
+          * Stanley Rosen: The Idea of Hegel's "Science of Logic"
+          * Micheal Allen Fox: The Accessible Hegel.
+          * Horst Althaus and Michael Tar: Hegel: An Intellectual Biography.
+        * Hans Friedrich Fulda: Georg Wilhelm Friedrich Hegel. C. H. Beck, 2013 (hard to read?)
+        * Ralf Ludwig: Hegel für Anfänger. Phänomenologie des Geistes. dtv
+        * 
+      -->
       <li lang="de">Conradt, Michael:
         <a href="https://www.youtube.com/watch?v=-jaWsJDcXu4">Die Welt ist Geist – Georg Wilhelm Friedrich Hegel</a>
         (<span lang="en">YouTube, 23 minutes, 04.06.2014</span>).
