--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -556,6 +556,33 @@
       <!-- http://www.livingpeacesite.org/An_Introduction_to_the_Work_of_Rene_Girard.pdf -->
     </ul>
 
+    <h2 id="applications">Books and Articles Applying the Mimetic Theory</h2>
+    <ul>
+      <li>Alison, James; Palaver, Wolfgang (editors):
+        <i class="booktitle">The Palgrave Handbook of Mimetic Theory and Religion</i>. Palgrave Macmillan <abbr>US</abbr>, 2017. (549 pages)
+        <a href="https://www.palgrave.com/us/book/9781137552808"><abbr>ISBN</abbr> 978-1-137-55280-8</a>. 
+      </li>
+      <li>Antonello, Pierpaolo; Gifford, Paul (editors):
+        <i class="booktitle">How We Became Human: Mimetic Theory and the Science of Evolutionary Origins</i>. Studies in Violence, Mimesis, &amp; Culture. Michigan State University Press, 2015.
+        <a href="http://msupress.org/books/book/?id=50-1D0-3F5E"><abbr>ISBN</abbr> 9781611861730</a>.
+      </li>
+      <li>Antonello, Pierpaolo; Webb, Heather (editors):
+        <i class="booktitle">Mimesis, Desire, and the Novel: René Girard and Literary Criticism</i>. Studies in Violence, Mimesis, &amp; Culture. Michigan State University Press, 2015. (358 pages)
+        <a href="http://msupress.org/books/book/?id=50-1D0-3F59"><abbr>ISBN</abbr> 9781611861655</a>.
+      </li>
+      <!--
+      <li>:
+        <i class="booktitle"></i>. .
+        <a href=""><abbr>ISBN</abbr> </a>. 
+      </li>
+      <li lang="fr">:
+        <i class="booktitle"></i>. .
+        <a href=""><abbr>ISBN</abbr> </a>. 
+      </li>
+      -->
+      <!-- Wolfgang Palaver: https://uibk.academia.edu/WolfgangPalaver & https://de.wikipedia.org/wiki/Wolfgang_Palaver -->
+    </ul>
+
     <!-- 
       Michel Deguy & Jean-Pierre Dupuy, eds.: René Girard et le problème du mal. Grasset, 1982. ISBN 9782246249719. http://www.grasset.fr/rene-girard-et-le-probleme-du-mal-9782246249719 
         Collection of essays; also contains biography & bibliography of René Girard.
