Biewald: Build a super fast deep learning machine ...

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -475,6 +475,10 @@
         <a href="https://www.oreilly.com/learning/how-to-build-and-run-your-first-deep-learning-network">How to build and run your first deep learning network</a>,
         <i class="website">O'Reilly Radar</i>, 23.07.2014.
       </li>
+      <li>Biewald, Lukas:
+        <a href="https://www.oreilly.com/learning/build-a-super-fast-deep-learning-machine-for-under-1000">Build a super fast deep learning machine for under $1,000</a>,
+        <i class="website">O'Reilly Radar</i>, 01.02.2017.
+      </li>
     </ul>
 
     <h3>Artificial Intelligence and Health (and Healthcare)</h3>
