Voorhies: Deep Learning for Everyone

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -479,6 +479,10 @@
         <a href="https://www.oreilly.com/learning/build-a-super-fast-deep-learning-machine-for-under-1000">Build a super fast deep learning machine for under $1,000</a>,
         <i class="website">O'Reilly Radar</i>, 01.02.2017.
       </li>
+      <li>Voorhies, William:
+        <a href="https://www.datasciencecentral.com/profiles/blogs/deep-learning-for-everyone-and-almost-free">Deep Learning for Everyone – and (Almost) Free</a>,
+        <i class="blog">Data Science Central blog</i>, 08.08.2016.
+      </li>
     </ul>
 
     <h3>Artificial Intelligence and Health (and Healthcare)</h3>
