Dubouchet: cow-boy; Tout comprendre avec ...

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -570,6 +570,14 @@
         <i class="booktitle">Mimesis, Desire, and the Novel: René Girard and Literary Criticism</i>. Studies in Violence, Mimesis, &amp; Culture. Michigan State University Press, 2015. (358 pages)
         <a href="http://msupress.org/books/book/?id=50-1D0-3F59"><abbr>ISBN</abbr> 9781611861655</a>.
       </li>
+      <li lang="fr">Dubouchet, Paul:
+        <i class="booktitle">René Girard, "cow-boy texan". Au fil de ses exploits</i>. L'Hermattan, 2017. (176 pages)
+        <a href="http://www.editions-harmattan.fr/index.asp?navig=catalogue&obj=livre&no=54094"><abbr>ISBN</abbr> 978-2-343-12503-9</a>. 
+      </li>
+      <li lang="fr">Dubouchet, Paul:
+        <i class="booktitle">Tout comprendre avec René Girard. Du moi aux grands problèmes actuels. Petit traité de la violence</i>. L'Hermattan, 2015. (218 pages)
+        <a href="http://www.editions-harmattan.fr/index.asp?navig=catalogue&obj=livre&no=46340&razSqlClone=1"><abbr>ISBN</abbr> 978-2-343-05426-1</a>. 
+      </li>
       <!--
       <li>:
         <i class="booktitle"></i>. .
