Pestov: A history of machine translation ...

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -483,6 +483,10 @@
         <a href="https://www.datasciencecentral.com/profiles/blogs/deep-learning-for-everyone-and-almost-free">Deep Learning for Everyone – and (Almost) Free</a>,
         <i class="blog">Data Science Central blog</i>, 08.08.2016.
       </li>
+      <li>Pestov, Ilya:
+        <a href="https://medium.freecodecamp.org/a-history-of-machine-translation-from-the-cold-war-to-deep-learning-f1d335ce8b5">A history of machine translation from the Cold War to deep learning</a>,
+        <i class="blog">freeCodeCamp on Medium</i>, 12.03.2018 (19-minute read).
+      </li>
     </ul>
 
     <h3>Artificial Intelligence and Health (and Healthcare)</h3>
