--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -578,6 +578,14 @@
         <i class="booktitle">Tout comprendre avec René Girard. Du moi aux grands problèmes actuels. Petit traité de la violence</i>. L'Hermattan, 2015. (218 pages)
         <a href="http://www.editions-harmattan.fr/index.asp?navig=catalogue&obj=livre&no=46340&razSqlClone=1"><abbr>ISBN</abbr> 978-2-343-05426-1</a>. 
       </li>
+      <li>Fornari, Giuseppe:
+        <i class="booktitle">A God Torn to Pieces: The Nietzsche Case</i>. Studies in Violence, Mimesis, &amp; Culture. Michigan State University Press, 2013. (162 pages)
+        <a href="http://msupress.org/books/book/?id=50-1D0-3EFE"><abbr>ISBN</abbr> 9781611861013</a>.
+      </li>
+      <li>Garrels, Scott R.:
+        <i class="booktitle">Mimesis and Science: Empirical Research on Imitation and the Mimetic Theory of Culture and Religion</i>. Studies in Violence, Mimesis, &amp; Culture. Michigan State University Press, 2011. (272 pages)
+        <a href="http://msupress.org/books/book/?id=50-1D0-3C40"><abbr>ISBN</abbr> 9781611860238</a>.
+      </li>
       <!--
       <li>:
         <i class="booktitle"></i>. .
